# CPU-80386-cpp

./: .gitignore  CMakeLists.txt  README.md  log.txt  main.cpp
src/: CMOS.h  KBD.h  PC.cpp  PC.h  main.cpp  x86.cpp  x86.h  x86op.cpp
src/x86/: x86.cpp  x86.h  x86flg.cpp  x86mem.cpp  x86str.cpp
